--- a/src/app/mom/demo/demo.component.html
+++ b/src/app/mom/demo/demo.component.html
@@ -93,11 +93,10 @@ Demo功能演示
 
 <alphahelp [content]="{code:'0001',name:'确认加载方式'}" (result)="afterHelp($event)" [readOnly]="readonly"></alphahelp>
 
-
 <helpcenter [content]="{code:'0001',name:'帮助中心动态帮助'}" helpId="alpha" [readOnly]="readonly" (result)="afterHelp($event)"></helpcenter>
 
-<materialhelp (result)="afterHelp($event)" ></materialhelp>
+<materialhelp [content]="{code:'0001',name:'物料'}" (result)="afterHelp($event)" ></materialhelp>
 
 <button nz-button (click)="readonly=!readonly">readonly</button>
 
-<flowchart [TreeData]="tree" [DataSource]="data" (blockClick)="showNode($event)"></flowchart>
+<flowchart [TreeData]="tree" (blockClick)="showNode($event)"></flowchart>
