--- a/src/app/share/helpcenter/alphahelp/alphahelp.component.html
+++ b/src/app/share/helpcenter/alphahelp/alphahelp.component.html
@@ -5,7 +5,6 @@
   [title]="'初始帮助'"
   [placeHolder]="'初始帮助'"
   [readOnly]="readOnly"
-  [multiSelect]="1==1"
-  [tree]="1==1"
-  [name]="'code'"
+  [multiSelect]="true"
+
 ></smarthelp>
