--- a/src/app/share/helpcenter/alphahelp/alphahelp.component.html
+++ b/src/app/share/helpcenter/alphahelp/alphahelp.component.html
@@ -5,6 +5,5 @@
   [title]="'初始帮助'"
   [placeHolder]="'初始帮助'"
   [readOnly]="readOnly"
-  [multiSelect]="true"
-  [name]="'code'"
+  [name]="'number'"
 ></smarthelp>
