--- a/src/app/share/smarthelp/smarthelp.component.html
+++ b/src/app/share/smarthelp/smarthelp.component.html
@@ -213,7 +213,7 @@
          [placeholder]="placeHolder"
          [ngStyle]="{'cursor':readOnly?'not-allowed':'pointer'}" type="text"/>
   <!--多选-->
-  <input #muiltInput nz-popover class="input" nzPlacement="bottomLeft" [nzTitle]="muiltTitle()" nz-input
+  <input #muiltInput nz-popover class="input" nzPlacement="bottomLeft" [nzTitle]="multiTitle()" nz-input
          (click)="openHelp()"
          [disabled]="readOnly"
          [placeholder]="placeHolder"
