--- a/src/theme.less
+++ b/src/theme.less
@@ -64,7 +64,19 @@
 }
 
 .ant-modal-header {
-  padding: 16px;
+  padding: 8px 16px !important;
+}
+
+.ant-modal-close-x{
+  line-height: 39px !important;
+  width: 48px !important;
+  height: 39px !important;
+  border-radius: 4px;
+}
+
+.ant-modal-close-x:hover{
+  background-color: @error-color;
+  color:#ffffff;
 }
 
 .ant-modal-footer {
