--- a/src/styles.less
+++ b/src/styles.less
@@ -44,8 +44,10 @@
 @text-color-dark : fade(#fff, 85%);
 @text-color-secondary-dark: fade(#fff, 65%);
 @font-variant-base : tabular-nums;
-@font-size-base : 14px;
-@font-size-lg : @font-size-base + 2px;
+//@font-size-base : 14px;
+@font-size-base : 12px;
+@font-size-lg : @font-size-base;
+//@font-size-lg : @font-size-base + 2px;
 @font-size-sm : 12px;
 @line-height-base : 1.5;
 @border-radius-base : 4px;
@@ -438,7 +440,8 @@
 @avatar-size-sm: 24px;
 @avatar-font-size-base: 18px;
 @avatar-font-size-lg: 24px;
-@avatar-font-size-sm: 14px;
+@avatar-font-size-sm: 12px;
+//@avatar-font-size-sm: 14px;
 @avatar-bg: #ccc;
 @avatar-color: #fff;
 @avatar-border-radius: @border-radius-base;
