--- a/src/base.less
+++ b/src/base.less
@@ -16,6 +16,11 @@ i {
   padding:4px !important;
 }
 
+.ant-btn{
+  span{
+    vertical-align: text-top;
+  }
+}
 
 .ant-form {
   font-size: @font-size-base !important;
