--- a/src/theme.less
+++ b/src/theme.less
@@ -39,7 +39,7 @@
 }
 
 .ant-form-item {
-  margin-bottom: @padding-xs !important;
+  margin-bottom: @padding-md !important;
 }
 
 .ant-calendar-picker {
@@ -92,5 +92,3 @@
 .primary-color {
   color: @primary-color !important;
 }
-
-
