--- a/src/app/mom/demo/demo.component.html
+++ b/src/app/mom/demo/demo.component.html
@@ -1,3 +1,4 @@
+<div style="background-color: #f3f3f3;margin:16px">
 Demo功能演示
 <br>
 <br>
@@ -9,7 +10,7 @@ Demo功能演示
 
 <button nz-button [nzType]="'primary'" (click)="post()">post</button>
 
-<form nz-form>
+<form nz-form style="background-color: #ffffff">
 
   <!--第一行-->
   <div nz-row>
@@ -97,6 +98,8 @@ Demo功能演示
 
 <materialhelp [content]="{code:'0001',name:'物料'}" (result)="afterHelp($event)" ></materialhelp>
 
-<button nz-button (click)="readonly=!readonly">readonly</button>
+<button nz-button (click)="readonly=!readonly">只读切换</button>
+</div>
 
 <flowchart [TreeData]="tree" (blockClick)="showNode($event)"></flowchart>
+
