树选择明细

--- a/src/app/share/helpcenter/alphahelp/alphahelp.component.html
+++ b/src/app/share/helpcenter/alphahelp/alphahelp.component.html
@@ -6,4 +6,7 @@
   [placeHolder]="'初始帮助'"
   [readOnly]="readOnly"
   [name]="'number'"
+  [multiSelect]="true"
+  [tree]="true"
+  [onlyItem]="true"
 ></smarthelp>
