--- a/src/theme.less
+++ b/src/theme.less
@@ -39,7 +39,7 @@
 }
 
 .ant-form-item {
-  margin-bottom: @padding-md !important;
+  margin-bottom: @padding-xs !important;
 }
 
 .ant-calendar-picker {
